# ChangeLog for net-libs/qxmpp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qxmpp-9999 (19 Jan 2011)

  19 Jan 2011; G. Rudoy <0xd34df00d@gmail.com> +qxmpp-9999.ebuild:
  Added QXmpp-9999.

*qxmpp-0.2.0 (19 Jan 2011)

  19 Jan 2011; G. Rudoy <0xd34df00d@gmail.com> +qxmpp-0.2.0.ebuild,
  +metadata.xml:
  Added QXmpp-0.2.0 library.
