@@ -1,5 +1,7 @@
 DIST qxmpp-0.2.0.tar.gz 431574 RMD160 549ffa0a138733606542cc894c3ccd5f916fc65e SHA1 e1dfb1b4366625fc6e1edc95d00c47e975e60350 SHA256 63e657775f523ab364150e0e49410f4b795276ccf6da1bfe92d4a3542d436a37
+DIST qxmpp-0.2.91.tar.gz 757241 RMD160 ac0bf0893ac5045cb0ec65172a6c7a110bdd468a SHA1 8d7e51a856e82b70451fd485c8f875c584f89416 SHA256 ba6c97c25f0aab8d0d43bf34fd09d8644ac2d2453527bfb2c684703d42bc0653
 EBUILD qxmpp-0.2.0.ebuild 468 RMD160 8b82ddfc63ccec7bcd1ea57376ba50d27b84c19d SHA1 76d3afc5e4c4bee441e57f4cf06164ea4fbf02bc SHA256 33f7d0ac7a973c2209d596b2fb64f330d44eff57cc0f12e64f6806340c6085d3
+EBUILD qxmpp-0.2.91.ebuild 468 RMD160 8b82ddfc63ccec7bcd1ea57376ba50d27b84c19d SHA1 76d3afc5e4c4bee441e57f4cf06164ea4fbf02bc SHA256 33f7d0ac7a973c2209d596b2fb64f330d44eff57cc0f12e64f6806340c6085d3
 EBUILD qxmpp-9999.ebuild 467 RMD160 51f114ccf49d48b47d0bea5dcab2cdbfc9a46243 SHA1 815bfecd55fcafa60ea9c2a6fe0c152b7cf16b4f SHA256 772bc64d04151b76a3f4a165e57691b35b7ad1016fa45c7ef6c8eb7f70dd0596
-MISC ChangeLog 373 RMD160 bb731b83dbf831658b2c08fe9671ac1eec8ba17e SHA1 c11db7ef33445dd89b981fc0e567542226a50f11 SHA256 005b33b2cc5013a2cadab4ef100f4f4d23d513df4635713022b519b1ad99f7e9
+MISC ChangeLog 507 RMD160 9d01de703cf0960917eaeda18a45ce8dbe3632ae SHA1 dba7ac56d1b090d97f621ca430b97f0e0fb16883 SHA256 985fddf7223e631f3b0fa37f49b2192814ece22a3acb557a6c0468b53d77dbf3
 MISC metadata.xml 372 RMD160 42b8050e738256f34295b999765bef319826ca55 SHA1 cdc3c2df9a863509f5d14d531c1ce57389b77092 SHA256 f76a980f0d9cc137c006eb9b2eea2e70d453261931fb09a26502bc18d71ab8c4
