@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qxmpp-0.2.91 (25 Jan 2011)
+
+  25 Jan 2011; G. Rudoy <0xd34df00d@gmail.com> +qxmpp-0.2.91.ebuild:
+  Added qxmpp-0.2.91, closes #130.
+
 *qxmpp-9999 (19 Jan 2011)
 
   19 Jan 2011; G. Rudoy <0xd34df00d@gmail.com> +qxmpp-9999.ebuild:
